# polka-poap

./: .gitignore  .prettierrc.js  .rustc_info.json  CONTRIBUTING.md  Cargo.toml  Dockerfile.frontend  Readme.md  docker-compose.contracts.yaml  docker-compose.frontend.yaml
.github/workflows/: PROJECTMGT_FLOW.yml
contracts/: .gitignore  .rustc_info.json  Cargo.toml  build-all.sh  package.json  pnpm-lock.yaml  test-all.sh
contracts/cxxbridge/rust/: cxx.h
contracts/deployments/events/: events.contract  events.json  events.wasm
contracts/deployments/users/: users.contract  users.json  users.wasm
contracts/events/: lib.rs
contracts/src/events/: Cargo.toml  lib.rs  tests.rs
contracts/src/polkapoap/: Cargo.toml  balances.rs  unit_tests.rs
contracts/src/users/: Cargo.toml  lib.rs  tests.rs
contracts/typed-contracts/build-extrinsic/: events.ts  users.ts
contracts/typed-contracts/constructors/: events.ts  users.ts
contracts/typed-contracts/contract-info/: events.ts  users.ts
contracts/typed-contracts/contracts/: events.ts  users.ts
contracts/typed-contracts/data/: events.json  users.json
contracts/typed-contracts/event-data/: events.json  users.json
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: types.d.ts
frontend/src/app/: page.tsx  (+2 more)
indexer/: schema.graphql  squid.yaml
indexer/abi/: events.json
indexer/src/: main.ts  processor.ts  types.d.ts
ink-interactors/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ink-interactors/src/: index.ts
users/: lib.rs
(+71 files in other folders)
